andrea/css/style.css
body {
    background: rgb(221,133,92);
    background: linear-gradient(45deg, rgba(221,133,92,1) 0%, rgba(72,108,104,1) 100%, rgba(73,108,104,1) 100%);
    height: 100vh;
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
}


button {
    border: none;
    text-transform: capitalize;
    font-weight: 300;
    padding: 8px;
    width: 136px;
    height: 40px;
    margin: 16px 8px;
    border-radius: 8px;
}


h2 {
    color: #F8ECDC;
    font-size: 48px;
    font-weight: 400;
    text-transform: capitalize;
}


header {
    display: flex;
}

label {
    display: none;
}

input {
    font-weight: 300;
    text-align: center;
    width: 296px;
    height: 32px;
    margin: 8px 0 16px;
    border: none;
    border-radius: 4px;
}

/* CLASSES */

.hidden {
    display: none;
}

.navbar {
    display: flex;
    width: 100%;
    align-items: center;
}

.logo {
    width: 104px;
    margin-right: auto;
}

.logo-icon:hover {
    color: #823E1D;
}

.card-img {
    display: flex;
    position: absolute;  
    height: 100vh;
    top: 0;
    justify-content: center;
    right: 200px; 
    z-index: -1; 
}

.navbar-sign {
    background-color: #2E4F48;
    color: #F8ECDC;
}

.navbar-login {
    margin-right: 32px;
    background-color:  #F8ECDC;
    color: #2E4F48;
}

.navbar-sign:hover, .navbar-login:hover, .features__button:hover {
    background-color: #823E1D;
    color: #F8ECDC;
}

.logo-icon {
    padding: 8px 16px;
    margin-left: 16px;
    margin-right: auto;
    color: #2E4F48;
}

.welcome-title {
    transition: font-size 200ms ease-in-out;
    font-weight: 400;
    font-size: 96px;
    color: #F8ECDC;
    margin: 96px 96px 48px;
}

.welcome-user {
    font-size: 50px;
}

.welcome-description {
    color: #F8ECDC;
    font-size: 40px;
    line-height: 2;
    margin: 0 104px;
    width: 336px;
}


.register-title, .login-title {
    width: fit-content;
    margin-left: 104px;
}


.login-title {
    font-size: 56px;
    margin-top: 160px;
}

.form--visibility {
    display: flex;
    flex-direction: column;
    margin: 56px 104px; 
}

.form__alternative {
    background-color: transparent;
    color: #2E4F48;
    font-size: 12px;
    margin: 0;
    width: 296px;
    text-align: center;
}

.form-alternative:hover {
    color: #823E1D;
}

.create__btn, .login-form__btn {
    background-color: #2E4F48;
    color: #F8ECDC;
    width:  296px;
    margin-left: 0;
    margin-right: 0;
}


.create__btn:hover, .login-form__btn:hover {
    background-color: #823E1D;
    color: #F8ECDC
}

.features-style {
    display: flex;
    margin-left: 96px;
    margin-top: 32px;
}

.features__button {
    background-color: #F8ECDC;
    color: #823E1D;
    margin-right: 72px ;
}



@media (max-width: 1024px) {
    .card-img {
        margin: 0 auto;
        right: 160px;

    }

    .welcome-title {
        margin: 104px auto 0;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .welcome-description {
        font-size: 32px;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    }

    .register-title, .login-title {
        font-size: 64px;
        justify-content: center;
        margin: 88px auto auto;
    }

    .form {
        align-items: center;
        margin-top: 16px;
    }

    .features-style {
        flex-direction: column;
        align-items: center;
    }
}

@media (max-width: 768px){

    .card-img {
        right: 80px;
    }
    .welcome-title {
        margin: 120px 0 0;
    }

    .welcome-user {
        text-align: center;
    }
    
    .welcome-description{
        font-size: 32px;
    }

    .register-title, .login-title {
        font-size: 56px;
        margin: 120px auto auto;
    }

    .form__show {
        margin-top: 16px;
        transform: none;
    }
    
}

@media (max-width: 500px){
    .logo-icon {
        font-size: 48px;
    }

    .welcome-title {
        margin: 120px 0 16px;
        font-size: 64px;
    }

    .welcome-description {
        width: 248px;
        font-size: 24px;
    }

    .register-title, .login-title {
        font-size: 48px;
        margin-top: 120px;
    }

    .form__show {
        margin: 0 104px; 
        transform: scale(0.8);
    }

}

